samples/_failures_safe/1761208707_e05283_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5a13fc05.c: In function ‘main’:
./samples/SAFE/__tmp_5a13fc05.c:145:14: error: ‘compressed’ undeclared (first use in this function); did you mean ‘compressed_buf’?
  145 |         free(compressed
      |              ^~~~~~~~~~
      |              compressed_buf
./samples/SAFE/__tmp_5a13fc05.c:145:14: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_5a13fc05.c:145:24: error: expected ‘)’ at end of input
  145 |         free(compressed
      |             ~          ^
      |                        )
./samples/SAFE/__tmp_5a13fc05.c:145:9: error: expected declaration or statement at end of input
  145 |         free(compressed
      |         ^~~~
./samples/SAFE/__tmp_5a13fc05.c:145:9: error: expected declaration or statement at end of input
